# Whatsapp-Automation

./: .gitignore  HOW_IT_WORKS.md  README.md  SETUP_LIVE.md  SETUP_NEW_MACHINE.md  docker-compose.yml  render.yaml  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app copy/: __init__.py
backend/app copy/api/: deps.py
backend/app copy/api/v1/: router.py
backend/app copy/core/: logging.py  middleware.py
backend/app copy/crud/: conversation.py  customer.py  faq.py  order.py
backend/app copy/db/: base.py  types.py
backend/app copy/integrations/ai/: __init__.py  gemini.py  vision.py
backend/app copy/integrations/whatsapp/: __init__.py
backend/app copy/models/: __init__.py  conversation.py  customer.py  enums.py  faq_suggestion.py  message.py  order.py  order_event.py
backend/app copy/schemas/: auth.py  conversation.py  customer.py  faq.py  order.py  stats.py
backend/app copy/services/: ai_service.py  faq_service.py  intent.py  stats_service.py
backend/app/core/: config.py  context.py  exceptions.py  security.py
backend/app/crud/: __init__.py  base.py
backend/app/db/: init_db.py  mixins.py  session.py
backend/app/integrations/ai/: base.py  (+2 more)
backend/app/models/: faq.py
backend/app/schemas/: chat.py  common.py  message.py
backend/app/services/: automation.py  conversation_service.py  order_service.py  seed.py
backend/tests/: conftest.py  test_auth.py  test_automation.py  test_health.py
(+35 files in other folders)
